examples/test/testpolicy4467.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4467
  namespace: namespace287
spec:
  podSelector:
    matchLabels:
      key21: value4
      key15: value36
      key11: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value27
          key45: value20
          key35: value13
      podSelector:
        matchLabels:
          key12: value24
          key36: value18
          key40: value46
